--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@ body {
 }
 
 header {
-    background-image: url("img/head.png");
+    background-image: url("head.png");
     background-size: cover;
     background-position: center;
     height: 180px;
